# rest_endpoints

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py  tests.py  tests_aio.py
.github/workflows/: ci.yml  publishing.yml  testing.yml
endpoints/: __init__.py  api.py  credentials.py  exceptions.py  methods.py
rest_endpoints/: __init__.py  aio_api.py  api.py  credentials.py  exceptions.py  methods.py
src/rest_endpoints/: __init__.py  aio_api.py  api.py  exceptions.py  logger.py
src/tests/: tests.py  tests_aio.py
