[tool.poetry]
name = "rest-endpoints"
version = "0.2.1"
description = "A object oriented library that helps you map and organize your HTTP ReST API endpoint calls."
authors = ["Ramon Moraes <ramonmoraes.foss@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "rest_endpoints", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.32.3"
aiohttp = { extras = ["async"], version = "^3.12.14" }

[tool.poetry.group.dev.dependencies]
packaging = "^24.2"
# pytest = "^8.3.3"
ruff = "^0.7.3"
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core", "packaging"]
build-backend = "poetry.core.masonry.api"
